--- a/app_dat_banco/templates/pages/cartao.html
+++ b/app_dat_banco/templates/pages/cartao.html
@@ -3,7 +3,7 @@
 <head>
   <title>Cartão Virtual</title>
   <link rel="stylesheet" href="style/geral.css">
-  <link rel="stylesheet" href="../style/cartao.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/cartao.css">
   
 </head>
 <body>
