--- a/app_dat_banco/templates/pages/pix.html
+++ b/app_dat_banco/templates/pages/pix.html
@@ -3,6 +3,7 @@
 <head>
   <title>Página de Transferência PIX</title>
   <link rel="stylesheet" href="style/geral.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/pix.css">
  
 </head>
 <body>
