--- a/app_dat_banco/templates/pages/poupança.html
+++ b/app_dat_banco/templates/pages/poupança.html
@@ -3,7 +3,7 @@
 <head>
   <title>Conta Poupança</title>
   <link rel="stylesheet" href="style/geral.css">
-  <link rel="stylesheet" href="../style/poupanca.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/poupanca.css">
 
   <script>
     function depositar() {
