--- a/app_dat_banco/templates/pages/seguro.html
+++ b/app_dat_banco/templates/pages/seguro.html
@@ -3,7 +3,7 @@
 <head>
   <title>Seguro de Vida</title>
   <link rel="stylesheet" href="style/geral.css">
-  <link rel="stylesheet" href="../style/seguro.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/seguro.css">
   <script>
     function selectPlan(planId) {
       var plans = document.getElementsByClassName('plan');
