--- a/app_dat_banco/templates/pages/emprestimo.html
+++ b/app_dat_banco/templates/pages/emprestimo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Solicitação de Empréstimo</title>
   <link rel="stylesheet" href="../style/geral.css">
-  <link rel="stylesheet" href="../style/emprestime.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/emprestime.css">
 
 </head>
 <body>
