--- a/app_dat_banco/templates/pages/pagamento-contas.html
+++ b/app_dat_banco/templates/pages/pagamento-contas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Pagamento de Contas</title>
   <link rel="stylesheet" href="style/geral.css">
-  <link rel="stylesheet" href="../style/contas.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/contas.css">
  
 </head>
 <body>
