--- a/app_dat_banco/templates/pages/tranferencias.html
+++ b/app_dat_banco/templates/pages/tranferencias.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Transferência</title>
   <link rel="stylesheet" href="style/geral.css">
-  <link rel="stylesheet" href="../style/transferencias.css">
+  <link rel="stylesheet" href="https://brayanlolv.github.io/prototipo/style/transferencias.css">
 
 </head>
 <body>
